# claude-code-beads-workflow

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE-workflow-migration.md  CLAUDE-workflow.md  CLAUDE.md  CLAUDE.md.example  QUICKSTART.md  README.md  TROUBLESHOOTING.md  install-workflow.sh  pyproject.toml
.claude/: doc-update-check.toml  settings.json
.claude/commands/: workflow-check.md  workflow-config.md  workflow-do.md  workflow-execute.md  workflow-health.md  workflow-init.md  workflow-land.md  workflow-overview.md  workflow-question-ask.md  workflow-questions.md  workflow-start.md  workflow-steer-correct.md  workflow-steer-research.md  workflow-track.md  workflow-work.md
.claude/lib/: open-questions-template.md  workflow-precheck.sh  workflow.py
.claude/rules/: 001-project-principles.md  002-open-questions-template.md  002-open-questions.md  003-multi-agent-coordination.md  004-beads-json-patterns.md  005-agent-dispatch.md  006-git-conventions.md  agent-dispatch.md  ai-native-instructions.md  beads-patterns.md  git-conventions.md  multi-agent-coordination.md  project-principles.md
_claude/lib/: workflow.py
docs/: QUICKSTART.md  beads-reference.md  test-bd-commands.sh  test-workflow-validation.md
docs/plans/: pydo-design.md
tests/: test-workflow-precheck.sh
