[project]
name = "claude-code-beads-workflow"
version = "0.1.0"
description = "Template for agentic AI development using Beads issue tracking"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function calls in default arguments
]

[tool.ruff.lint.isort]
known-first-party = ["workflow"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
